
AM_CPPFLAGS = -I$(top_srcdir)/include
LIBS = ../../src/libxmlwrapp.la

TESTS = runtest.pl

noinst_PROGRAMS = \
		test_document-01 \
		test_document-02 \
		test_document-03 \
		test_document-04 \
		test_document-05 \
		test_document-06 \
		test_document-07 \
		test_document-08 \
		test_document-09 \
		test_document-10 \
		test_document-11 \
		test_document-12 \
		test_document-13 \
		test_document-14 \
		test_document-15 \
		test_document-16 \
		test_document-17 \
		test_document-18 \
		test_document-19 \
		test_document-20 \
		test_document-21 \
		test_document-22

test_document_01_SOURCES = test_document-01.cxx
test_document_02_SOURCES = test_document-02.cxx
test_document_03_SOURCES = test_document-03.cxx
test_document_04_SOURCES = test_document-04.cxx
test_document_05_SOURCES = test_document-05.cxx
test_document_06_SOURCES = test_document-06.cxx
test_document_07_SOURCES = test_document-07.cxx
test_document_08_SOURCES = test_document-08.cxx
test_document_09_SOURCES = test_document-09.cxx
test_document_10_SOURCES = test_document-10.cxx
test_document_11_SOURCES = test_document-11.cxx
test_document_12_SOURCES = test_document-12.cxx
test_document_13_SOURCES = test_document-13.cxx
test_document_14_SOURCES = test_document-14.cxx
test_document_15_SOURCES = test_document-15.cxx
test_document_16_SOURCES = test_document-16.cxx
test_document_17_SOURCES = test_document-17.cxx
test_document_18_SOURCES = test_document-18.cxx
test_document_19_SOURCES = test_document-19.cxx
test_document_20_SOURCES = test_document-20.cxx
test_document_21_SOURCES = test_document-21.cxx
test_document_22_SOURCES = test_document-22.cxx

EXTRA_DIST = data/*.out data/*.xml runtest.pl
