
AM_CPPFLAGS = -I$(top_srcdir)/include
LIBS = ../../src/libxmlwrapp.la

TESTS = runtest.pl

noinst_PROGRAMS = \
		test_node-01 \
		test_node-02a \
		test_node-02b \
		test_node-02c \
		test_node-02d \
		test_node-02e \
		test_node-02f \
		test_node-02g \
		test_node-02h \
		test_node-03a \
		test_node-03b \
		test_node-04a \
		test_node-04b \
		test_node-05a \
		test_node-05b \
		test_node-05c \
		test_node-05d \
		test_node-06 \
		test_node-07 \
		test_node-08 \
		test_node-09 \
		test_node-10 \
		test_node-11 \
		test_node-12 \
		test_node-13 \
		test_node-14

test_node_01_SOURCES = test_node-01.cxx
test_node_02a_SOURCES = test_node-02a.cxx
test_node_02b_SOURCES = test_node-02b.cxx
test_node_02c_SOURCES = test_node-02c.cxx
test_node_02d_SOURCES = test_node-02d.cxx
test_node_02e_SOURCES = test_node-02e.cxx
test_node_02f_SOURCES = test_node-02f.cxx
test_node_02g_SOURCES = test_node-02g.cxx
test_node_02h_SOURCES = test_node-02h.cxx
test_node_03a_SOURCES = test_node-03a.cxx
test_node_03b_SOURCES = test_node-03b.cxx
test_node_04a_SOURCES = test_node-04a.cxx
test_node_04b_SOURCES = test_node-04b.cxx
test_node_05a_SOURCES = test_node-05a.cxx
test_node_05b_SOURCES = test_node-05b.cxx
test_node_05c_SOURCES = test_node-05c.cxx
test_node_05d_SOURCES = test_node-05d.cxx
test_node_06_SOURCES = test_node-06.cxx
test_node_07_SOURCES = test_node-07.cxx
test_node_08_SOURCES = test_node-08.cxx
test_node_09_SOURCES = test_node-09.cxx
test_node_10_SOURCES = test_node-10.cxx
test_node_11_SOURCES = test_node-11.cxx
test_node_12_SOURCES = test_node-12.cxx
test_node_13_SOURCES = test_node-13.cxx
test_node_14_SOURCES = test_node-14.cxx

EXTRA_DIST = data/*.out data/*.xml runtest.pl
