
AM_CPPFLAGS = -I$(top_srcdir)/include
LIBS = ../../src/libxmlwrapp.la

TESTS = runtest.pl

noinst_PROGRAMS = \
		test_tree-01 \
		test_tree-02 \
		test_tree-03 \
		test_tree-04 \
		test_tree-05 \
		test_tree-06

test_tree_01_SOURCES = test_tree-01.cxx
test_tree_02_SOURCES = test_tree-02.cxx
test_tree_03_SOURCES = test_tree-03.cxx
test_tree_04_SOURCES = test_tree-04.cxx
test_tree_05_SOURCES = test_tree-05.cxx
test_tree_06_SOURCES = test_tree-06.cxx
